--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href=" https://i.imgur.com/BZGUdOd.png"/>
-    <script src="https://use.fontawesome.com/releases/v5.8.1/css/all.css"></script>
+    <script src=Access-Control-Allow-Origin:https://use.fontawesome.com/releases/v5.8.1/css/all.css></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>GODESSWHITEAK Website</title>
