--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 <div class="box">
-  <img src="https://i.imgur.com/RAKHg5w.png" alt="" class="box-img">
+  <img src="https://i.imgur.com/1jngzX2.png" alt="" class="box-img">
   <h1>
 GODESSWHITEAK</h1>
 <h5>
